# AxSDK

./: .gitignore  AxLinearAllocatorWin32.c  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SetPositionTest.txt
Foundation/: CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/AxAudio/: CMakeLists.txt
Plugins/AxAudio/include/AxAudio/: AxAudio.h
Plugins/AxAudio/src/: Win32Audio.c
Plugins/AxLog/: CMakeLists.txt
Plugins/AxLog/cmake/: AxLogConfig.cmake.in
Plugins/AxLog/include/AxLog/: AxLog.h
Plugins/AxLog/tests/src/: AxLogTests.cpp
Plugins/AxOpenGL/: CMakeLists.txt
Plugins/AxOpenGL/include/AxOpenGL/: AxOpenGL.h  AxOpenGLTypes.h
Plugins/AxOpenGL/src/: AxOpenGLLinux.c  AxOpenGLWin32.c
Plugins/AxResource/: CMakeLists.txt
Plugins/AxResource/include/AxResource/: AxResource.h  AxResourceTypes.h  AxShaderManager.h
Plugins/AxResource/include/AxScene/: AxScene.h
Plugins/AxResource/src/: AxCoreSystems.cpp  AxCoreSystems.h  AxRenderSystem.cpp  AxRenderSystem.h  AxResource.c  AxResource.cpp  AxScene.cpp  AxSceneParserInternal.h  AxScriptSystem.cpp  AxScriptSystem.h  AxShaderManager.c  AxStandardComponents.cpp  AxStandardComponents.h  AxStubSystems.h  AxTransformSystem.cpp  AxTransformSystem.h  ResourceSystem.cpp  ResourceSystem.h
Plugins/AxResource/tests/: CMakeLists.txt
Plugins/AxResource/tests/cmake/: AxResourceTestsConfig.cmake.in
Plugins/AxResource/tests/src/: ResourceAPITests.cpp  ResourceTests.cpp
Plugins/AxScene/: CMakeLists.txt
Plugins/AxScene/cmake/: AxSceneConfig.cmake.in
Plugins/AxScene/include/AxScene/: AxScene.h
Plugins/AxScene/src/: AxScene.c
Plugins/AxScene/tests/: CMakeLists.txt
Plugins/AxScene/tests/cmake/: AxSceneLoaderTestsConfig.cmake.in
Plugins/AxScene/tests/src/: SceneAllocatorTests.cpp  SceneDataStructureTests.cpp  SceneEventsTests.cpp  SceneLoaderTests.cpp  SceneParserTests.cpp
Plugins/AxWindow/: CMakeLists.txt
Plugins/AxWindow/include/AxWindow/: AxWindow.h
Plugins/AxWindow/src/: Win32Window.c
Plugins/AxWindow/tests/: AxWindowTests.cpp  CMakeLists.txt
Plugins/AxWindow/tests/src/: AxWindowTests.cpp
Plugins/Win32OpenGL/: CMakeLists.txt
Plugins/Win32OpenGL/cmake/: Win32OpenGLConfig.cmake.in
Plugins/Win32OpenGL/src/: Renderer.c  Win32OpenGL.c  glad.c
engine/: CMakeLists.txt
engine/cmake/: AxEngineConfig.cmake.in
engine/docs/: editor-integration.md
engine/examples/: CMakeLists.txt
engine/include/AxEngine/: AxComponent.h  AxComponentFactory.h  AxDebugDraw.h  AxEngine.h  AxEventBus.h  AxInput.h  AxMathTypes.h  AxNode.h  AxPrimitives.h  AxProperty.h  AxPropertyReflection.h  AxRenderTypes.h  AxRenderer.h  AxResource.h  AxScene.h  AxSceneManager.h  AxSceneParser.h  AxSceneTree.h  AxSceneTypes.h  AxScript.h  AxScriptBase.h  AxScriptLog.h  AxScriptRegistry.h  AxScripting.h  AxShaderManager.h  AxSignal.h  AxSystem.h  AxSystemFactory.h  AxTransformType.h  AxTypedNodes.h
engine/src/: Application.cpp  AxComponentFactory.cpp  AxDebugDraw.cpp  AxEngine.c  AxEngine.cpp  AxEventBus.cpp  AxInput.cpp  AxNode.cpp  AxPrimitives.cpp  AxPropertyReflection.cpp  AxRenderer.cpp  AxScene.cpp  AxSceneManager.cpp  AxSceneParser.cpp  AxSceneTree.cpp  AxScript.cpp  AxScriptLog.cpp  AxScriptRegistry.cpp  AxScripting.cpp  AxShaderManager.cpp  AxStandalone.cpp  AxSystemFactory.cpp  AxTransformType.cpp  AxTypedNodes.cpp
engine/tests/: CMakeLists.txt
engine/tests/cmake/: AxEngineTestsConfig.cmake.in
engine/tests/src/: AxBuildConfigTests.cpp  AxComponentFactoryTests.cpp  AxCoreSystemTests.cpp  AxDebugDrawTests.cpp  AxEditorReadinessTests.cpp  AxEventBusTests.cpp  AxInputActionTests.cpp  AxIntegrationTests.cpp  AxMacroGuardTests.cpp  AxMathTypesTests.cpp  AxNodeTests.cpp  AxParserExTests.cpp  AxPrimitivesTests.cpp  AxPropertyReflectionTests.cpp  AxSceneClassTests.cpp  AxSceneExTests.cpp  AxSceneQueryTests.cpp  AxSceneTreeTests.cpp  AxScriptBaseTests.cpp  AxScriptLogTests.cpp  AxScriptSystemTests.cpp  AxSignalTests.cpp  AxStandardComponentTests.cpp  AxTypedNodeTests.cpp  MaterialTests.cpp
examples/graphics/: CMakeLists.txt
examples/graphics/models/: suzanne.glb
examples/graphics/scenes/: primitives_demo.ats  sponza_atrium.ats
examples/graphics/shaders/: frag.glsl  ortho.glsl  vert.glsl
examples/graphics/src/: App.cpp  AxApplication.h  Game.cpp  Game.h  Host.cpp  OpenGLExample.cpp  OpenGLExample.h  OpenGLGame.cpp  main.cpp
foundation/: CMakeLists.txt
foundation/cmake/: FoundationConfig.cmake.in
foundation/docs/: LinearAllocatorUsage.md
foundation/include/Foundation/: APIRegistry.h  Application.h  AxAPIRegistry.h  AxAllocUtils.h  AxAllocationData.h  AxAllocator.h  AxAllocatorAPI.h  AxAllocatorInfo.h  AxAllocatorRegistry.h  AxApplication.h  AxArray.h  AxCamera.h  AxDrawable.h  AxEditorPlugin.h  AxHash.h  AxHashTable.h  AxHeap.h  AxLinearAllocator.h  AxLinkedList.h  AxMath.h  AxPlatform.h  AxPlugin.h  AxStackAllocator.h  AxTypes.h  Camera.h  Hash.h  HashTable.h  ImageLoader.h  Intrinsics.h  LinkedList.h  Math.h  Platform.h  Plugin.h  Strings.h  Types.h
foundation/src/: APIRegistry.c  AxAPIRegistry.c  AxAllocUtils.c  AxAllocatorAPI.c  AxAllocatorInfo.c  AxAllocatorInfo.h  AxAllocatorRegistry.c  AxCamera.c  AxHashTable.c  AxHeapLinux.c  AxHeapWin32.c  AxIntrinsics.c  AxLinearAllocatorLinux.c  AxLinearAllocatorWin32.c  AxLinkedList.c  AxLinuxPlatform.c  AxMath.c  AxStackAllocatorWin32.c  AxWin32Platform.c  Camera.c  Hash.c  HashTable.c  Plugin.c  Win32Platform.c
foundation/tests/: CMakeLists.txt
foundation/tests/cmake/: FoundationTestsConfig.cmake.in
foundation/tests/src/: AxAllocatorRegistryTests.cpp  AxAllocatorTests.cpp  AxArrayTests.cpp  CameraTests.cpp  HashmapTests.cpp  LinkedListTests.cpp  MathTests.cpp
internal/Drawable/: CMakeLists.txt
internal/Drawable/cmake/: DrawableConfig.cmake.in
internal/Drawable/src/: AxDrawList.c
internal/Drawable/tests/: CMakeLists.txt
plugins/AxLog/tests/: CMakeLists.txt
plugins/AxWindow/: CMakeLists.txt
plugins/AxWindow/cmake/: AxWindowConfig.cmake.in
plugins/AxWindow/src/: Win32Window.c
plugins/AxWindow/tests/: CMakeLists.txt  tests.txt  tests_8_10.txt
(+111 files in other folders)
